--- a/PLAYSTATION 2/playstation 2.html
+++ b/PLAYSTATION 2/playstation 2.html
@@ -68,7 +68,7 @@
     </div>
     <header class="header2">
         <div">
-            <a type="button" class="navegador" href="/INICIO/index.html" class="nav-link">Inicio</a>
+            <a type="button" class="navegador" href="index.html" class="nav-link">Inicio</a>
             <a type="button" class="navegador" href="/PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
             <a type="button" class="navegador" href="/PLAYSTATION 4-5/playstation4_1.html" class="nav-link">PS4-PS5</a>
         </div>
@@ -175,3 +175,4 @@ function comprarJuegoPS2(nombreJuego) {
 
 
 </html>
+
