--- a/PLAYSTATION 4-5/playstation4_3.html
+++ b/PLAYSTATION 4-5/playstation4_3.html
@@ -69,9 +69,9 @@
     <header class="header2">
 </div>
         <div">
-            <a class="navegador" href="../INICIO/index.html" class="nav-link">Inicio</a>
-            <a class="navegador" href="../PLAYSTATION 2/playstation 2.html" class="nav-link">PS2</a>
-            <a class="navegador" href="../PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
+            <a class="navegador" href="index.html" class="nav-link">Inicio</a>
+            <a class="navegador" href="/PLAYSTATION 2/playstation 2.html" class="nav-link">PS2</a>
+            <a class="navegador" href="/PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
         </div>
     </header>
         <!-- Seccion de los juegos -->
@@ -204,10 +204,11 @@
 </footer>
     </main>
 </body>
-<script src="../GLOBALE/btncarrito.js"></script>
-<script src="../GLOBALE/btn_flotante.js"></script>
-<script src="..//GLOBALE/comprar.js"></script>
-<script src="../GLOBALE/buscador-global.js"></script>
-<script src="../GLOBALE/carrusel.js"></script>
+<script src="/GLOBALE/btncarrito.js"></script>
+<script src="/GLOBALE/btn_flotante.js"></script>
+<script src="//GLOBALE/comprar.js"></script>
+<script src="/GLOBALE/buscador-global.js"></script>
+<script src="/GLOBALE/carrusel.js"></script>
 <script src="paginacion.js"></script>
+
 </html>
