--- a/PLAYSTATION 4-5/playstation4_1.html
+++ b/PLAYSTATION 4-5/playstation4_1.html
@@ -73,7 +73,7 @@
             <a type="button" class="navegador" href="/PLAYSTATION 2/playstation 2.html" class="nav-link">PS2</a>
             <a type="button" class="navegador" href="/PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
         </div>
-    </header> type="button"
+    </header> 
 <h2 class="mas-vendidos">Juegos con más rebajas</h2>
         <!-- Seccion de los juegos -->
         <section class="seccion-juegos">
@@ -214,3 +214,4 @@
 <script src="paginacion.js"></script>
 
 </html>
+
