--- a/PLAYSTATION 4-5/playstation4_3.html
+++ b/PLAYSTATION 4-5/playstation4_3.html
@@ -69,7 +69,7 @@
     <header class="header2">
 </div>
         <div">
-            <a class="navegador" href="index.html" class="nav-link">Inicio</a>
+            <a class="navegador" href="/index.html" class="nav-link">INICIO</a>
             <a class="navegador" href="/PLAYSTATION 2/playstation 2.html" class="nav-link">PS2</a>
             <a class="navegador" href="/PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
         </div>
@@ -212,3 +212,4 @@
 <script src="paginacion.js"></script>
 
 </html>
+
