Se agg nuevo formulario para ps3

--- a/PLAYSTATION 3/playstation 3_1.html
+++ b/PLAYSTATION 3/playstation 3_1.html
@@ -22,8 +22,10 @@
             <!-- Los productos se cargarán aquí -->
         </div>
         <div class="footer-mini-carrito">
-            <button type="button" class="btn-ver-carrito-completo" onclick="irAlCarrito()">Ver Carrito Completo</button>
-        </div>
+    <button type="button" class="btn-ver-carrito-completo" onclick="irAlCarrito()">
+        Ver Carrito Completo PS3
+    </button>
+</div>
     </div>
 </div>
 
@@ -100,5 +102,7 @@
     <script src="/GLOBALE/carrusel.js"></script>
     <script src="paginacion.js"></script>
     <script src="/GLOBALE/juegosps3.js"></script>
+    <script src="carrito-ps3.js"></script>
+    
 </body>
 </html>
