--- a/PEDIDOS/pedidosps3.html
+++ b/PEDIDOS/pedidosps3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="pedidosps3.css">
 </head>
 <body>
-    <form class="formulario-pedidos" id="formPedidos">
+   <form class="formulario-pedidos" id="formPedidosPS3" onsubmit="enviarAGmailPS3(event)">
         <h1 class="titulo-formulario">🛒 Pedir Videojuegos PS3</h1>
         
         <!-- Sección del Carrito -->
@@ -100,4 +100,5 @@
     </form>
 </body>
 <script src="formulario.js"></script>
+
 </html>
