--- a/PLAYSTATION 3/playstation 3_1.html
+++ b/PLAYSTATION 3/playstation 3_1.html
@@ -75,7 +75,7 @@
         <div>
             <a type="button" class="navegador" href="/index.html" class="nav-link">INICIO</a>
             <a type="button" class="navegador" href="/PLAYSTATION 2/playstation 2.html" class="nav-link">PS2</a>
-            <a type="button" class="navegador" href="/PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
+            <a type="button" class="navegador" href="/PLAYSTATION 4/playstation 4_1.html" class="nav-link">PS4-PS5</a>
         </div>
     </header>
 
@@ -105,4 +105,5 @@
     <script src="carrito-ps3.js"></script>
     
 </body>
+
 </html>
